# tmock

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/tmock/: __init__.py  call_context.py  call_record.py  class_schema.py  exceptions.py  field_ref.py  interceptor.py  last_call_context.py  method_interceptor.py  mock_engine.py  mock_generator.py  mock_state.py  patch.py  reset.py  stubbing_dsl.py  tpatch.py  verification_dsl.py
tests/: conftest.py  test_async.py  test_mock_engine.py  test_mock_generator.py  test_mock_protocol.py  test_raises.py  test_reset.py  test_runs.py  test_signature_validation.py  test_stubbing_dsl.py  test_verification_dsl.py
tests/error_messages/: test_getter_errors.py  test_method_errors.py  test_setter_errors.py
tests/field_discovery/: test_annotation_discovery.py  test_dataclass_discovery.py  test_property_discovery.py  test_pydantic_discovery.py
tests/field_dsl/: test_getter_dsl.py  test_setter_dsl.py
tests/forward_refs/: fixtures.py  test_edge_cases.py  test_patch_classmethod.py  test_patch_function.py  test_patch_method.py  test_patch_staticmethod.py  test_tmock.py
tests/magic_methods/: test_container.py  test_container_integration.py  test_context_manager.py  test_context_manager_integration.py  test_hashing_comparison.py  test_iteration.py  test_iteration_integration.py  test_string_repr.py  test_tmock_call_magic_method.py  test_truthiness.py
tests/matchers/: test_any_matcher.py
tests/mock_function/: test_mock_function.py  test_mock_function_integration.py
(+41 files in other folders)
